<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.manus.MainActivity">

    <item
        android:id="@+id/edit"
        android:orderInCategory="100"
        android:title="@string/editar_datos"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/message"
        android:orderInCategory="100"
        android:title="@string/message"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/see"
        android:orderInCategory="100"
        android:title="@string/seeDates"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/erase"
        android:orderInCategory="100"
        android:title="@string/eraseDates"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="ifRoom" />
</menu>
